# need-cv-asap

./: README.md
backend/: .env  .gitignore  pyproject.toml
backend/app/: main.py
backend/app/prompts/: cv-scan-v2.txt  cv-scan.txt
backend/app/services/: openai_service.py
backend/app/services/openai_service/: service.py
